@@ -1,3 +1,10 @@
+2010-12-31  Ian Campbell <ijc@hellion.org.uk>
+
+	* util/grub.d/20_linux_xen.in (linux_entry): Correctly capitalize
+	Xen and reorder menu item wording to make it clearer that this entry
+	will launch Xen.  Print separate messages when loading Xen and
+	Linux.
+
 2010-12-31  Vladimir Serbinenko  <phcoder@gmail.com>
 
 	* grub-core/partmap/amiga.c (GRUB_AMIGA_PART_MAGIC): New define.
